# pulsera

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json
.agent/skills/frontend-design/: SKILL.md
apps/mobile/: README.md  eslint.config.mjs  global.css  jest.config.js  metro.config.js  package.json  tailwind.config.js
apps/mobile/app/: _layout.tsx  checkin.tsx
apps/mobile/app/(tabs)/: _layout.tsx  alerts.tsx  family.tsx  index.tsx  settings.tsx
apps/mobile/app/episode/: [id].tsx
apps/mobile/app/member/: [id].tsx
apps/mobile/components/: AlertBanner.tsx  EpisodeCard.tsx  GlassBlurCard.tsx  GlassCard.tsx  GroupCard.tsx  HeartRateDisplay.tsx  NotificationOverlay.tsx  PulseCard.tsx  StatusIndicator.tsx
apps/mobile/components/__tests__/: basic.test.tsx
apps/mobile/lib/: api.ts  episodeSimulator.ts  membersStore.ts  notificationStore.ts  simulatedData.ts  theme.ts  websocket.ts
apps/mobile/modules/smartspectra-bridge/: index.ts
apps/server/: .env.example  Makefile  README.md  pyproject.toml  pyrightconfig.json
apps/server/tests/: test_alert_and_community_routes.py  test_auth_and_group_routes.py
apps/watch/: README.md  project.yml
apps/web/: README.md  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/src/components/: CustomCursor.tsx  (+8 more)
docs/: API.md  ARCHITECTURE.md  SETUP.md  STYLE.md  TESTING.md
docs/links/: caiolinks.md
docs/plans/: plan1.md
docs/ref-code/: analysis-overlay.tsx  index.ts  map-transition.tsx  terrain-analysis-scene.tsx
(+5 files in other folders)
