[project]
name = "pulsera-server"
version = "0.1.0"
description = "Pulsera — Community Safety Pulse Network Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "websockets>=14.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "pyright>=1.1.389",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
